# calcli

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  PKGBUILD  PUBLISHING.md  README.md  flake.nix  install.ps1  install.sh  update-version.sh
.github/issue_template/: feature_request.md
.github/workflows/: release.yml
src/: constant.rs  error.rs  eval.rs  eval_context.rs  function.rs  history_io.rs  implicit_multiplication.rs  input_handler.rs  lib.rs  main.rs  parser.rs  unit_conversion.rs  variable.rs  vi_inputs.rs
src/conversion_handler/: mod.rs  scientific_notation.rs
src/definition_handler/: definition.rs  function.rs  mod.rs  parse_function.rs  parse_variable.rs  variable.rs
src/tui_handler/: input_handler.rs  mod.rs  selection.rs  tui_handler.rs  vi_inputs.rs
tests/: eval_tests.rs  history_io_tests.rs  scientific_notation_tests.rs
